Closed Bug 1069386 Opened 11 years ago Closed 11 years ago

IonMonkey MIPS: Fix build failures on MIPS caused by recent updates (visitAsmJSCall)

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: aleksandar.zlicic, Assigned: aleksandar.zlicic)

Details

Attachments

(1 file)

No description provided.
Attachment #8491538 - Flags: review?(branislav.rankov)
Attachment #8491538 - Flags: review?(branislav.rankov) → review+
Assignee: nobody → aleksandar.zlicic
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: