Bug 1069386 - IonMonkey MIPS: Fix build failures on MIPS caused by recent updates (visitAsmJSCall). r=rankov