js/src/jit/mips/CodeGenerator-mips.cpp
@@ -1893,6 +1893,7 @@ bool
 CodeGeneratorMIPS::visitAsmJSCall(LAsmJSCall *ins)
 {
     emitAsmJSCall(ins);
+    return true;
 }
 
 bool
